<added grid example>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,6 +324,19 @@ body {
 }
 /* REACH OUT STYLES END */
 
+/* Grid container styles */
+.service-grid-container {
+    display: grid;
+}
+
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
+
 footer {
     background: #fce138;
     width: 100%;
