--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,14 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 header a {
@@ -23,6 +31,7 @@ header h1 {
     margin: 0;
     font-size: 36px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header nav {
@@ -41,6 +50,14 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
 }
 
 /* Hero Style Start */
@@ -63,6 +80,13 @@ margin: 0;
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 .hero-form label {
@@ -79,6 +103,8 @@ margin: 0;
     color: #024e76;
     width: 40%;
     margin: 3.5%;
+    text-shadow: 0 0 10px rgba(252, 225, 256, 0.8);
+    border-radius: 15px;
 }
 
 .hero {
@@ -89,6 +115,8 @@ margin: 0;
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 .hero-cta {
@@ -103,7 +131,8 @@ margin: 0;
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138
+    color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form button {
@@ -112,6 +141,12 @@ margin: 0;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
+}
+
+.hero-form button:hover {
+    background-color: #39a6b2;
+}
 }
 
 /* secondary page hero */
@@ -173,11 +208,18 @@ body {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+
+.step:nth-child(even) {
+    border-bottom: 1px solid #39a6b2;
+}
+
+.step:not(last-child) {
+    border-bottom: 1px solid #39a6b2;
 }
 
 .step-info {
@@ -301,7 +343,12 @@ body {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+}
 
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
 }
 
 .contact-form button {
@@ -312,6 +359,12 @@ body {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
+}
+
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
 }
 
 .section-title {
@@ -419,6 +472,7 @@ footer a {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
 
     header h1 {
