--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -1,8 +1,5 @@
 .hero {
-    background-image: url(../assets/images/hero-bg.jpg);
-    background-size: cover;
     background-position: bottom;
-    position: relative;
     height: auto;
     text-align: center;
     margin-bottom: 40px;
@@ -16,4 +13,39 @@
 .secondary-content {
     width: 80%;
     margin: 
+}
+
+.page-title {
+    color: #fce138;
+    display: inline-block;
+    border-bottom: 4px solid #fce138;
+    padding: 0 80px 15px 80px;
+    font-weight: normal;
+    font-size: 42px;
+    font-style: italic;
+}
+
+.secondary-content {
+    width: 80%;
+    margin: 80%;
+}
+
+.secondary-content h3 {
+    font-size: 25px;
+    margin: 20px 0 20px 0;
+}
+
+.secondary-content p {
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 80%;
+}
+
+.secondary-content ul {
+    margin: 15px 20px 15px 20px;
+}
+
+.secondary-content li {
+    color: #39a6b2;
+    margin: 10 0 10 0;
 }
